<resources>
    <string name="app_name">Fitback</string>
    <string name="facebook_app_id">2158327954249847</string>
    <string name="fb_login_protocol_scheme">fb2158327954249847</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="login">Connexion</string>
    <string name="logout">Déconnexion</string>
    <string name="create_account">Créez le Compte</string>
    <string name="no_account">Vous n\'avez pas encore de compte ? \n créez-en un</string>
    <string name="already_member">Déjà membre ? Connexion</string>
    <string name="lastname">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="map">Carte</string>
    <string name="me">Moi</string>
    <string name="stats">Statistique</string>
    <string name="height">Taille</string>
    <string name="weight">Poids</string>
    <string name="age">Age</string>
    <string name="save">Sauvegarder</string>
    <string name="activityName">Nom de l\'activité</string>
    <string name="empty">-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
